2017-05-30  Mark Wielaard  <mark@klomp.org>

	* ppc64_unwind.c: New file.
	* ppc64_init.c (pcc64_init): Hook unwind.
	* Makefile.am (ppc64_SRCS): Add ppc64_unwind.c

2017-04-06  Mark Wielaard  <mark@klomp.org>

	* i386_unwind.c: New file.
	* i386_init.c: Hook i386_unwind.
	* Makefile.am (i386_SRCS): Add i386_unwind.c

2017-02-09  Ulf Hermann  <ulf.hermann@qt.io>

	* aarch64_unwind.c: New file
	* Makefile.am (aarch64_SRCS): Add aarch64_unwind.c
	* aarch64_init.c (aarch64_init): Hook aarch64_unwind

2017-02-09  Ulf Hermann  <ulf.hermann@qt.io>

	* x86_64_unwind.c: New file
	* Makefile.am (x86_64_SRCS): Add x86_64_unwind.c
	* x86_64_init.c (x86_64_init): Hook x86_64_unwind

2017-04-20  Ulf Hermann <ulf.hermann@qt.io>

	* aarch64_initreg.c: Compile register initialization only on linux.
	* arm_initreg.c: Likewise.
	* ppc_initreg.c: Likewise.
	* s390_initreg.c: Likewise.
	* x86_64_initreg.c: Likewise.

2017-02-15  Mark Wielaard  <mark@klomp.org>

	* ppc64_init.c (ppc64_init): Add check_object_attribute HOOK.
	* ppc_attrs.c (ppc_check_object_attribute): Add Single-precision hard
	float.

2016-11-02  Mark Wielaard  <mjw@redhat.com>

	* i386_regs.c (i386_register_info): Add fallthrough comment.
	* i386_retval.c (i386_return_value_location): Move fallthrough
	comment.
	* linux-core-note.c (core_note): Adjust fallthrough comment.
	* m68k_retval.c (m68k_return_value_location): Move fallthrough
	comment.
	* ppc_regs.c (ppc_register_info): Add fallthrough comment.
	* x86_64_regs.c (x86_64_register_info): Likewise.

2016-08-09  Jose E. Marchesi  <jose.marchesi@oracle.com>

	* sparc_attrs.c (sparc_check_object_attribute): Fix the
	calculation of GNU_SParc_HWCAPS and GNU_SParc_HWCAPS2 values as
	comma-separated list of hw capability names.

2016-07-10  Andreas Schwab  <schwab@linux-m68k.org>

	* m68k_corenote.c (ALIGN_PRSTATUS): Define.
	* linux-core-note.c (struct EBLHOOK(prstatus)): Set alignment to
	ALIGN_PRSTATUS if defined.

2016-06-28  Richard Henderson <rth@redhat.com>
